--- a/mocked/mockup.html
+++ b/mocked/mockup.html
@@ -12,7 +12,7 @@
     </head>
     <body>
 
-----------
+<!-- ---------- -->
 <div class="row pt-4 mt-4">
     <div class="col-xs-4 col-xs-offset-4">
         <H1>EKKO</H1>
@@ -23,8 +23,8 @@
                 <h2>Secure Messaging Service</h2>
             </div>
         </div>
-        <form>
-            Enter Key:<br>
+        <form action="POST">
+            <label for="send_message">Send Message</label>
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Enter Key"/>
             </div>
@@ -32,13 +32,23 @@
 
                 <br>
                 <div class="form-group">
-                    <label for="message_text">Enter Message:</label>
-                    <textarea class="form-control" id="<message></message>" rows="6"></textarea>
+                    <textarea class="form-control" id="<message></message>" rows="6" placeholder="Type your message here"></textarea>
                 </div>
-                <button class="btn btn-default" type="button">SEND</button>
-            </div><!-- /input-group -->
-        </form>
+                <button class="btn btn-primary" type="button">SEND</button>
 
+        </form>
+        <p>
+            <div class="form-group">
+                <form class="mt-4 pt-4" action="POST">
+                    <label for="get_message">Retrieve Received Message</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Enter Key"/>
+                    </div>
+                    <br>
+                    <button class="btn btn-primary" type="button">GET MESSAGE</button>
+                </form>
+            </div>
+        </div><!-- /input-group -->
     </div>
 
     </body>
