--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="/style.css">
 
 </head>
+
 <body>
     <header>
+
         <nav>
             <div class="nav-wrapper">
-                <a href="/" class="brand-logo right">Ekko</a>
+                <a href="/" class="navbar-brand left waves-effect waves-light">EKKO</a>
             </div>
         </nav>
     </header>
@@ -53,8 +55,8 @@
             </div>
         </div>
     </main>
-    <footer class="page-footer">
-    </footer>
+    <!-- <footer class="page-footer">
+    </footer> -->
     <script src="https://unpkg.com/vue@2.1.3/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/emojione/2.2.6/lib/js/emojione.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
