--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,12 @@
 <body>
     <header>
         <nav>
-            <div class="nav-wrapper">
-                <a href="/" class="brand-logo right">Ekko</a>
+            <div class="nav-wrapper orange lighten-2">
+
+                    <a href="/" class="brand-logo right">
+                        <img src="logo_copy.png" width="50%" length="50%">
+                    </a>
+                
             </div>
         </nav>
     </header>
@@ -46,14 +50,14 @@
                 <input type="text" v-model.trim="username" placeholder="Username">
             </div>
             <div class="input-field col s4">
-                <button class="waves-effect waves-light btn" @click="join()">
+                <button class="waves-effect waves-light btn black" @click="join()">
                     <i class="material-icons right">done</i>
                     Join
                 </button>
             </div>
         </div>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer orange">
     </footer>
     <script src="https://unpkg.com/vue@2.1.3/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/emojione/2.2.6/lib/js/emojione.min.js"></script>
