--- a/public/index.html
+++ b/public/index.html
@@ -24,36 +24,49 @@
     </header>
     <main id="app">
         <div class="row">
-            <div class="col s12">
+            <div class="col s2"></div>
+            <div class="col s8">
                 <div class="card horizontal">
-                    <div id="chat-messages" class="card-content" v-html="chatContent">
+                    <div id="chat-messages" v-if="joined" class="card-content" v-html="chatContent">
                     </div>
                 </div>
             </div>
         </div>
         <div class="row" v-if="joined">
-            <div class="input-field col s8">
+            <div class="col s2"></div>
+            <div class="input-field col s7">
                 <input type="text" v-model="newMsg" @keyup.enter="send">
             </div>
-            <div class="input-field col s4">
-                <button class="waves-effect waves-light btn" @click="send">
+            <div class="input-field col s2">
+                <button class="waves-effect waves-light btn black" @click="send">
                     <i class="material-icons right">chat</i>
                     Send
                 </button>
             </div>
         </div>
         <div class="row" v-if="!joined">
-            <div class="input-field col s8">
-                <input type="text" v-model.trim="avatar" placeholder="Enter link to image to use as Avatar, blank for default">
-            </div>
-            <div class="input-field col s8">
-                <input type="text" v-model.trim="username" placeholder="Username">
-            </div>
-            <div class="input-field col s4">
-                <button class="waves-effect waves-light btn black" @click="join()">
-                    <i class="material-icons right">done</i>
-                    Join
-                </button>
+                <div class="row">
+                        <div class="col s4"></div>
+                        <div class="input-field col s4">
+                            <input type="text" v-model.trim="avatar" placeholder="Enter link to image to use as Avatar, blank for default">
+                        </div>
+                </div>
+
+            <div class="row">
+                    <div class="col s4"></div>
+                        <div class="input-field col s4">
+                                <input type="text" v-model.trim="username" placeholder="Username">
+                        </div>
+                </div>
+
+            <div class="row">
+                    <div class="col s5"></div>
+                    <div class="input-field col s2" style="padding-left: 4%">
+                            <button class="waves-effect waves-light btn black" @click="join()">
+                                <i class="material-icons right">done</i>
+                                Join
+                            </button>
+                    </div>
             </div>
         </div>
     </main>
@@ -64,6 +77,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
     <script src="/app.js"></script>
 </body>
 </html>
