landing.html, css dir and img dir added to /public

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
     <header>
         <nav>
             <div class="nav-wrapper orange lighten-2">
-
+                <div class="col s2">
                     <a href="/" class="brand-logo right">
                         <img src="logo_copy.png" width="50%" length="50%">
                     </a>
-                
+                </div>
             </div>
         </nav>
     </header>
