change 'Read More' button to 'Enter Chat'

--- a/public/landing.html
+++ b/public/landing.html
@@ -95,7 +95,7 @@
                               Secure Private Messaging System
                           </h4>
 
-                          <button type="button" class="btn btn-outline-white">Read more<i class="fas fa-book ml-2"></i></button>
+                          <button type="button" class="btn btn-outline-white">Chat Now<i class="fas fa-comments ml-2"></i></button>
                       </div>
                   </div>
 
