--- a/public/landing.html
+++ b/public/landing.html
@@ -94,8 +94,9 @@
                           <h4 class="white-text my-4">
                               Secure Private Messaging System
                           </h4>
-
-                          <button type="button" class="btn btn-outline-white">Chat Now<i class="fas fa-comments ml-2"></i></button>
+                            <a href="index.html">
+                              <button type="button" class="btn btn-outline-white">Chat Now<i class="fas fa-comments ml-2"></i></button>
+                            </a>
                       </div>
                   </div>
 
