--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -76,6 +76,17 @@
                     </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col s2"></div>
+            <div class="col s8">
+                <div class="card horizontal">
+                    <div id="users" v-if="joined" class="card-content" v-html="userList">
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
     <footer class="page-footer orange">
     </footer>
