[update] html, chat routing

--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -16,7 +16,7 @@
             <div class="nav-wrapper orange lighten-2">
 
                     <a href="/" class="brand-logo right">
-                        <img src="logo_copy.png" width="50%" length="50%">
+                        <img src="chat/logo_copy.png" width="50%" length="50%">
                     </a>
                 
             </div>
