--- a/public/index.html
+++ b/public/index.html
@@ -32,45 +32,6 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
 
-              <!-- Collapsible content -->
-              <div class="collapse navbar-collapse" id="basicExampleNav">
-
-                <!-- Links -->
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="soon.html">About Us
-                      <span class="sr-only">(current)</span>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="soon.html">Features</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="soon.html">Pricing</a>
-                  </li>
-
-                  <!-- Dropdown -->
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                      aria-haspopup="true" aria-expanded="false">More</a>
-                    <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="soon.html">Calendar</a>
-                      <a class="dropdown-item" href="soon.html">Petitions</a>
-                      <a class="dropdown-item" href="soon.html">Resources</a>
-                    </div>
-                  </li>
-
-                </ul>
-                <!-- Links -->
-
-                <form class="form-inline">
-                  <div class="md-form my-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                  </div>
-                </form>
-              </div>
-              <!-- Collapsible content -->
-
             </nav>
             <!--/.Navbar-->
             <!--Mask-->
@@ -94,7 +55,10 @@
                           <h4 class="white-text my-4">
                               Secure Private Messaging System
                           </h4>
-                            <a href="chat/index.html">
+                          <a href="/create">
+                            <button type="button" class="btn btn-outline-white">Create Room<i class="fas fa-comments ml-2"></i></button>
+                          </a>
+                            <a href="/chat">
                               <button type="button" class="btn btn-outline-white">Chat Now<i class="fas fa-comments ml-2"></i></button>
                             </a>
                       </div>
@@ -192,8 +156,7 @@
 
                             <!--Grid column-->
                             <div class="col-lg-4 col-md-6 mb-4">
-                                2: Enter Username (& optional profile
-                                picture link)
+                                2: Either create a Room ID or, if you have a Room ID, Join an existing room.
                                 <div class="view overlay z-depth-1-half">
                                   <img src="./img/ekko_2.png" class="img-fluid">
                                   <a href="#!">
@@ -206,7 +169,8 @@
                         <div class="row">
                             <!--Grid column-->
                             <div class="col-lg-4 col-md-6 mb-4">
-                                3: Create message & Click Send
+                                3: Enter Username and Room ID (& optional profile
+                                picture link)
                                 <div class="view overlay z-depth-1-half">
                                   <img src="./img/ekko_3.png" class="img-fluid">
                                   <a href="#!">
@@ -219,7 +183,7 @@
 
                             <!--Grid column-->
                             <div class="col-lg-4 col-md-6 mb-4">
-                                4: Message Sent
+                                4: Create message & Click Send
                                 <div class="view overlay z-depth-1-half">
                                   <img src="./img/ekko_4.png" class="img-fluid">
                                   <a href="#!">
